card 01 code and design section

--- a/index.html
+++ b/index.html
@@ -34,4 +34,62 @@
         </div>
     </header>
     <main>
+        <!-- Card-01 Code -->
+         <div class="card-01-full-container">
+            <div>
+                <h2 class="card-01-title" ><span style="color: #E95A08;">Our</span> Plants</h2>
+                <p class="card-01-description dark-03 inter-font">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+            </div>
+            <div class="card-01-container">
+                <div>
+                    <img class="card-01-image" src="assets/sample-flower-image.png" alt="">
+                    <p class="name inter-font">Lily Blossom</p>
+                    <p class="price inter-font">20 USD</p>
+                    <button class="card-01-button inter-font"><a style="text-decoration: none;color: white;" href="">ADD TO CART</a></button>
+                </div>
+                <div>
+                    <img class="card-01-image" src="assets/sample-flower-image.png" alt="">
+                    <p class="name inter-font">Lily Blossom</p>
+                    <p class="price inter-font">20 USD</p>
+                    <button class="card-01-button inter-font"><a style="text-decoration: none;color: white;" href="">ADD TO CART</a></button>
+                </div>
+                <div>
+                    <img class="card-01-image" src="assets/sample-flower-image.png" alt="">
+                    <p class="name inter-font">Lily Blossom</p>
+                    <p class="price inter-font">20 USD</p>
+                    <button class="card-01-button inter-font"><a style="text-decoration: none;color: white;" href="">ADD TO CART</a></button>
+                </div>
+                <div>
+                    <img class="card-01-image" src="assets/sample-flower-image.png" alt="">
+                    <p class="name inter-font">Lily Blossom</p>
+                    <p class="price inter-font">20 USD</p>
+                    <button class="card-01-button inter-font"><a style="text-decoration: none;color: white;" href="">ADD TO CART</a></button>
+                </div>
+                <div>
+                    <img class="card-01-image" src="assets/sample-flower-image.png" alt="">
+                    <p class="name inter-font">Lily Blossom</p>
+                    <p class="price inter-font">20 USD</p>
+                    <button class="card-01-button inter-font"><a style="text-decoration: none;color: white;" href="">ADD TO CART</a></button>
+                </div>
+                <div>
+                    <img class="card-01-image" src="assets/sample-flower-image.png" alt="">
+                    <p class="name inter-font">Lily Blossom</p>
+                    <p class="price inter-font">20 USD</p>
+                    <button class="card-01-button inter-font"><a style="text-decoration: none;color: white;" href="">ADD TO CART</a></button>
+                </div>
+                <div>
+                    <img class="card-01-image" src="assets/sample-flower-image.png" alt="">
+                    <p class="name inter-font">Lily Blossom</p>
+                    <p class="price inter-font">20 USD</p>
+                    <button class="card-01-button inter-font"><a style="text-decoration: none;color: white;" href="">ADD TO CART</a></button>
+                </div>
+                <div>
+                    <img class="card-01-image" src="assets/sample-flower-image.png" alt="">
+                    <p class="name inter-font">Lily Blossom</p>
+                    <p class="price inter-font">20 USD</p>
+                    <button class="card-01-button inter-font"><a style="text-decoration: none;color: white;" href="">ADD TO CART</a></button>
+                </div> 
+            </div>
+        </div>  
+          <!-- Plants Lover Code  -->
        
