--- a/index.html
+++ b/index.html
@@ -92,4 +92,42 @@
             </div>
         </div>  
           <!-- Plants Lover Code  -->
-       
+        <div class="plant-lover-container">
+            <div>
+                <img class="plant-lover-image" src="assets/flower-store.png" alt="">
+                <img class="trusted-icon" src="assets/trusted-badge.png" alt="">
+            </div>
+            <div class="plant-lover-text-container">
+                <h1 class="noto-serif-font plant-lover-title">Flower & Plants Lover</h1>
+                <ul class="inter-font dark-03">
+                    <li class="plant-lover-list">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                    <li class="plant-lover-list">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                    <li class="plant-lover-list">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                </ul>
+            </div>
+        </div>  
+        <!-- Latest  Deals Code -->
+        <div style="text-align: center;margin-top: 140px;">
+            <div>
+                <h1 class="noto-serif-font latest-deals-title"><span style="color: #E95A08;">Latest</span>  Deals</h1>
+                <p class="inter-font dark-03 latest-deals-description">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+            </div>
+            <div class="latest-deals-pic-container">
+                <div class="pic-01-02" >
+                    <div class="latest-deals-pic-01">
+                        <p class="pic-title noto-serif-font">60% Off | Bloom Plant</p>
+                        <a class="pic-a noto-serif-font" href="">Shop Now</a>
+                    </div> 
+                    <div class="latest-deals-pic-02">
+                        <p class="pic-title noto-serif-font">30% Off | Ana  Plant</p>
+                        <a class="pic-a noto-serif-font" href="">Shop Now</a>
+                    </div>
+                </div>
+                <div class="latest-deals-pic-03">
+                    <p class="pic-title-03 noto-serif-font">25% Off | Zabo Plant</p>
+                    <a class="pic-a-03 noto-serif-font" href="">Shop Now</a>
+                </div>
+            </div>    
+        </div>
+        <!-- Colorful Bunch Code -->
+         
