--- a/index.html
+++ b/index.html
@@ -130,4 +130,43 @@
             </div>    
         </div>
         <!-- Colorful Bunch Code -->
-         
+         <div class="colorful-bunch-container">
+            <h1 class="noto-serif-font colorful-bunch-title">Join the colorful Bunch</h1>
+            <form>
+                <input class="email" placeholder="Write email" type="email" name="" id="">
+                <input class="subscribe" type="submit" value="Subscribe">
+            </form>
+         </div>
+    </main>
+    <footer>
+        <div class="footer-logo">
+            <img src="assets/logo.png" alt="">
+            <p style="color:rgba(0, 0, 0, 0.5); font-size: 22px;">Indulge your senses with the <br> beauty and fragrance of our fresh <br> flower shop. </p>
+        </div>
+        <div class="footer-button-01">
+            <ul class="footer-list-01">
+                <li><a href="">Home</a></li>
+                <li><a href="">About Us</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href="">FAQ</a></li>
+                <li><a href="">Contact Us</a></li>
+            </ul>
+        </div>
+        <div class="footer-button-02">
+            <ul class="footer-list-02">
+                <li><a class="" href="">Features</a></li>
+                <li><a href="">Pricing</a></li>
+                <li><a href="">Privacy Policy</a></li>
+                <li><a href="">Terms of Service</a></li>
+                <li><a href="">Help Center</a></li>
+            </ul>
+        </div>
+        <div class="footer-links">
+            <a href=""><img src="assets/icon-linkedin.png" alt=""></a>
+            <a href=""><img style="width: 38px; height: 38px;" src="assets/download.png" alt=""></a>
+            <a href=""><img src="assets/icon-facebook.png" alt=""></a>
+            <a href=""><img src="assets/icon-youtube.png" alt=""></a>
+        </div>
+    </footer>
+</body>
+</html>
